styles/quiz.css
.btn {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 700;
  padding: 1rem;
  border: 2px solid white;
  border-radius: 2rem;
  margin-top: 0.25rem;
  background-color: #d15151;
  transition: all 300ms;
  cursor: pointer;
}

.results{
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 700;
}

.btn:hover {
  background-color: white;
  color: rgb(0, 0, 0);
  border-color: #d15151;
}

.btn.correct {
  background-color: rgb(48, 183, 0);
  color: black;
}

.btn.wrong {
  background-color: red;
  color: white;
}

.name-div {
  color: white;
  text-align: center;
}

.account-level {
  color: white;
  text-align: center;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.account-div {
  width: 45rem;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  font-family: Arial, Helvetica, sans-serif;
    font-weight: 700;
}

.experience-bar {
  width: 100%;
  height: 20px;
  background-color: #f0f0f0;
}

.experience {
  height: 100%;
  background-color: #d15151;
  width: 0;
  transition: width 0.3s ease;
}

